--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -1,4 +1,16 @@
 .shop-container{
     display: grid;
-    grid-template-columns: 3fr, 1fr;
+    grid-template-columns: 4fr 1fr;
+}
+
+
+
+
+
+
+
+.product-container{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 45px;
 }
