--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -1,12 +1,38 @@
+.product{
+    width: 265px;
+    height: 510px;
+    margin-left:100px;
+    margin-top:80px;
+    border:1px solid #ECEEF0;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 8px;
+   
+}
+
 .product img{
     width: 250px;
     height: 300px;
     background-color: #ECEEF0;
-    padding: 10px;
-    margin: 3%;
     border-radius: 10px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin-top: 5px;
+}
+
+.btn-cart{
+    width: 100%;
+    background: #FFE0B3;
+    border-radius: 0px 0px 8px 8px;
+    border:none;
+    margin-top: 45px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+   
     
+
+   
+
     
- 
+}
+.btn-cart:hover {
+    background-color: orange;
 }
