--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -7,4 +7,20 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 45px;
+    margin: 100px 50px
 }
+
+.cart-container{
+    background-color: #F8F5F5;
+    
+}
+
+@media screen and (max-width:500px){
+    .product-container{
+        grid-template-columns: repeat(1, 1fr);
+        
+        
+       
+    }
+}
+    
